<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SearchProductsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkBox_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/common_horizontal_small_margin"
            android:text="@string/text_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox_lowerPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/text_lowerPrice"
            app:layout_constraintEnd_toStartOf="@+id/checkBox_higherPrice"
            app:layout_constraintStart_toEndOf="@id/checkBox_default"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox_higherPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/common_horizontal_small_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/text_higherPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_Products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_horizontal_small_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            app:layout_constraintEnd_toEndOf="@+id/checkBox_higherPrice"
            app:layout_constraintStart_toStartOf="@+id/checkBox_default"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_default"
            app:spanCount="2"
            tools:itemCount="3"
            tools:listitem="@layout/item_grid_products" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_error"
        android:layout_width="match_parent"
        style="@style/TextAppearance.AppCompat.Display1"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/text_not_results"
        android:visibility="invisible"/>

</FrameLayout>